--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Hola soy el main</p>
     </main>
     <footer>
-        <li>Elemento en el footer</li>
+        <li>Creado por Emilio Mendoza:)</li>
 
     </footer>
 
